[gd_scene load_steps=2 format=3 uid="uid://studymode001"]

[ext_resource type="Script" path="res://demo/study_mode_ui.gd" id="1"]

[node name="StudyMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftPanel" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="DicomViewer" type="DicomViewer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ImageControls" type="HBoxContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="PrevImageButton" type="Button" parent="HSplitContainer/LeftPanel/ImageControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "← Previous Image"

[node name="ImageIndexLabel" type="Label" parent="HSplitContainer/LeftPanel/ImageControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Image 1 / 1"
horizontal_alignment = 1

[node name="NextImageButton" type="Button" parent="HSplitContainer/LeftPanel/ImageControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Image →"

[node name="RightPanel" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "Question 1 / 5"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/RightPanel"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "Question will appear here"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/RightPanel"]
layout_mode = 2

[node name="AnswerLabel" type="Label" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "Your Answer:"

[node name="AnswerEdit" type="TextEdit" parent="HSplitContainer/RightPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "Submit Answer"

[node name="HSeparator3" type="HSeparator" parent="HSplitContainer/RightPanel"]
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
text = "Feedback will appear here after submission"
autowrap_mode = 3

[node name="NextQuestionButton" type="Button" parent="HSplitContainer/RightPanel"]
layout_mode = 2
disabled = true
text = "Next Question"

[node name="BackToMenuButton" type="Button" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="HSplitContainer/LeftPanel/ImageControls/PrevImageButton" to="." method="_on_prev_image_button_pressed"]
[connection signal="pressed" from="HSplitContainer/LeftPanel/ImageControls/NextImageButton" to="." method="_on_next_image_button_pressed"]
[connection signal="pressed" from="HSplitContainer/RightPanel/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="HSplitContainer/RightPanel/NextQuestionButton" to="." method="_on_next_question_button_pressed"]
[connection signal="pressed" from="HSplitContainer/RightPanel/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]